--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Es un juego Arcade realizado como prueba para un curso de MiriadaX
+Es un juego Arcade realizado como prueba para un curso de MiriadaX (android 5+)
